Upgrading to Scala 2.13 and latest versions of libs